--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         function hideURLbar() {
             window.scrollTo(0, 1);
         }
+
     </script>
     <!-- Custom Theme files -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
@@ -57,6 +58,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
             });
         });
+
     </script>
 
     <!-- header -->
@@ -76,7 +78,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <div class="hdr-w3left navbar-left">
-                            <img src=images/logo_jcs_helv.png>
+                            <a href="index.html"><img src=images/logo_jcs_helv.png></a>
                         </div>
                         <div class="w3menu navbar-right">
                             <ul class="nav navbar">
@@ -367,6 +369,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 }, 1000);
             });
         });
+
     </script>
     <!-- //end-smooth-scrolling -->
     <!-- smooth-scrolling-of-move-up -->
@@ -386,6 +389,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             });
 
         });
+
     </script>
     <!-- //smooth-scrolling-of-move-up -->
     <!-- Bootstrap core JavaScript
