--- a/pta.html
+++ b/pta.html
@@ -57,7 +57,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <div class="hdr-w3left navbar-left">
-                            <img src=images/logo_jcs_helv.png>
+                            <a href="index.html"><img src=images/logo_jcs_helv.png></a>
                         </div>
                         <div class="w3menu navbar-right">
                             <ul class="nav navbar">
