--- a/recruitment.html
+++ b/recruitment.html
@@ -126,7 +126,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
-                    <img src="images/Mission%201.jpg" alt=" " class="img-responsive" />
+                    <img src="images/Mission.png" alt=" " class="img-responsive" />
                     <span>
                         <p>
                            <stron>Becoming Part of the JCS Team</stron> 
@@ -137,24 +137,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     We are a small and growing school with an excellent staff-student ratio. The school operates from Pre-school through to Year 11, and has started planning for Post 16 studies. The design of the school enables both outdoor and indoor learning, and our green field site is a wonderful learning environment for our children. We follow the National Curriculum of England and Wales and lessons are delivered in English. Our older students prepare themselves for the Cambridge International General Certificates in Secondary Education (iGCSE). 
                     <br><br>
                     Jogjakarta is a thriving and vibrant city in the centre of Java. Known as a special region, the city is rich with culture and diversity. Located between the mountains and the ocean, with the Sultan’s Palace at the centre, ‘Jogja ’is not far from the World Heritage sites of Borobudur and Prambanan. The school is situated in the foothills of Mt. Merapi. Working and living on the beautiful tropical island of Java will be a rewarding experience and an opportunity to really make a difference. We provide a unique chance to experience life in a fascinating part of the world.
-                    <br><br> If you are interested in joining our team send your recent curriculum vitae and a letter outlining your reasons for applying. Please include a passport size photograph and full details of 3 professional referees. Send your open application to humanresources@jogjacommunityschool.org
+                    <br><br> If you are interested in joining our team send your recent curriculum vitae and a letter outlining your reasons for applying. Please include a passport size photograph and full details of 3 professional referees. Send your open application to <a href="officemanager@jogjacommunityschool.org">officemanager@jogjacommunityschool.org</a>
                     <br>
                     </p>
                     </span>
                     <span>
                     <p><strong>Available positions for 2018-2019 </strong></p>
-                    <p><strong>Teaching Appointments (Full Time)</strong></p>
-                        <ul>
-                            <li>Primary / EYFS</li>
-                            <li>Secondary English (with the ability to offer some History or Social Science)</li>
-                        </ul>
                     <p><strong>Teaching Appointments (Part Time)</strong></p>
                         <ul>
                             <li>Music</li>
+                              <li>Art</li>
                         </ul>
-                                            <p><strong>Team Teacher Appointments (Full Time)</strong></p>
+                    <p><strong>Team Teacher Appointments (Full Time)</strong></p>
                         <ul>
-                            <li>To work with Primary teachers</li>
+                            <li>Working alongside our primary school teachers </li>
                         </ul>
                     </span>
                     <div class="clearfix"> </div>
