--- a/index.html
+++ b/index.html
@@ -230,12 +230,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-sm-4 news-w3lgrids">
                     <div class="news-gridtext">
                         <div class="news-w3img">
-                            <a href="single.html"><img src="images/squares/Primary.jpg" class="img-responsive zoom-img"  alt=""/></a>
+                            <a href="single.html"><img src="images/squares/Primary_web.png" class="img-responsive zoom-img"  alt=""/></a>
                         </div>
                         <div class="news-w3imgtext">
                             <h4><a href="single.html">Calendar</a></h4>
-                            <p>2017 - 2018 Calendar.
-                                <br> 2018 - 2019 Calendar.
+                            <p>2017 - 2018 Calendar
+                                <br> 2018 - 2019 Calendar
                             </p>
                         </div>
                     </div>
@@ -243,12 +243,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-sm-4 news-w3lgrids">
                     <div class="news-gridtext">
                         <div class="news-w3img">
-                            <a href="single.html"><img src="images/squares/EYFS.jpg" class="img-responsive zoom-img" alt=""/></a>
+                            <a href="single.html"><img src="images/squares/events1.jpg" class="img-responsive zoom-img" alt=""/></a>
                         </div>
                         <div class="news-w3imgtext">
                             <!--							<h5 class="w3-agilep">Nov 4, 2016</h5>-->
                             <h4><a href="single.html">Special Events</a></h4>
-                            <p>Events and activities enriching our children's learning.</p>
+                            <p>Events and activities enriching our children's learning</p>
                             <!--							<a class="w3-agilebtn" href="single.html"><span>Read More</span></a> -->
                         </div>
                     </div>
@@ -256,12 +256,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-sm-4 news-w3lgrids">
                     <div class="news-gridtext">
                         <div class="news-w3img">
-                            <a href="single.html"><img src="images/squares/Events.JPG" class="img-responsive zoom-img" alt=""/></a>
+                            <a href="single.html"><img src="images/circles/new_gallery.jpg" class="img-responsive zoom-img" alt=""/></a>
                         </div>
                         <div class="news-w3imgtext">
                             <!--							<h5 class="w3-agilep">Sept 21, 2016</h5>-->
                             <h4><a href="single.html">Gallery</a></h4>
-                            <p>Photographs of our school, learning and special events.</p>
+                            <p>Photographs of our school, learning and special events</p>
                             <!--							<a class="w3-agilebtn" href="single.html"><span>Read More</span></a>-->
                         </div>
                     </div>
