--- a/pastoral.html
+++ b/pastoral.html
@@ -24,19 +24,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
     </script>
     <!-- Custom Theme files -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.css">
     <link href="css/bootstrap.css" type="text/css" rel="stylesheet" media="all">
     <link href="css/style.css" type="text/css" rel="stylesheet" media="all">
     <link href="css/font-awesome.css" rel="stylesheet">
     <!-- font-awesome icons -->
     <!-- //Custom Theme files -->
     <!-- js -->
-    <!--<script src="js/jquery-2.2.3.min.js"></script>  -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/bxslider/4.2.12/jquery.bxslider.min.js"></script>
-
-
-
+    <script src="js/jquery-2.2.3.min.js"></script>
     <!-- //js -->
     <!-- web-fonts -->
     <link href="//fonts.googleapis.com/css?family=Limelight" rel="stylesheet">
@@ -45,21 +39,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 </head>
 
 <body>
-
-    <script>
-        $(function() {
-            $('.bxslider').bxSlider({
-                auto: true,
-                mode: 'fade',
-                captions: false,
-                responsive: true,
-                adaptiveHeight: false,
-                slideWidth: 0
-
-            });
-        });
-
-    </script>
 
     <!-- header -->
     <div class="header-w3layoutstop">
@@ -86,22 +65,22 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><span data-letters="Pages">About</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="welcome.html">Welcome</a></li>
-                                        <li><a href="vision.html">Vision and Mission</a></li>
-                                        <li><a href="governance.html">Governance</a></li>
-                                        <li><a href="pta.html">PTA</a></li>
+                                        <li><a href="codes.html">Vision and Mission</a></li>
+                                        <li><a href="codes.html">Governance</a></li>
+                                        <li><a href="codes.html">PTA</a></li>
                                         <li><a href="enviromental_mindfulness.html">Eco Awareness</a></li>
-                                        <li><a href="recruitment.html">Recruitment</a></li>
+                                        <li><a href="codes.html">Recruitment</a></li>
                                     </ul>
                                 </li>
                                 <!--							<li><a href="about.html">Curriculum</a></li> -->
                                 <li><a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">         <span data-letters="Pages">Curriculum</span><span class="caret"></span></a>
                                     <ul class="dropdown-menu">
                                         <li><a href="icons.html">Our Curriculum</a></li>
-                                        <li><a href="eyfs.html">EYFS</a></li>
+                                        <li><a href="codes.html">EYFS</a></li>
                                         <li><a href="codes.html">Primary</a></li>
                                         <li><a href="codes.html">Secondary</a></li>
-                                        <li><a href="bahasaIndonesia.html">Bahasa Indonesia</a></li>
-                                        <li><a href="pastoral.html">Pastoral Care</a></li>
+                                        <li><a href="codes.html">Bahasa Indonesia</a></li>
+                                        <li><a href="codes.html">Pastoral Care</a></li>
                                     </ul>
                                 </li>
 
@@ -138,180 +117,43 @@ License URL: http://creativecommons.org/licenses/by/3.0/
         </div>
     </div>
     <!-- //header -->
-
-
-    <!--    SliDER-->
-    <div class="bxslider">
-        <div><img src="images/rolling/1_web.jpg" title="Playing outdoors"></div>
-        <div><img src="images/rolling/2_web.jpg" title="Summer carnival"></div>
-        <div><img src="images/rolling/3_web.jpg" title="Learning stations"></div>
-        <div><img src="images/rolling/4_web.JPG" title="Playing outdoors"></div>
-        <div><img src="images/rolling/5_web.jpg" title="Summer carnival"></div>
-        <div><img src="images/rolling/6_web.jpg" title="Learning stations"></div>
-        <div><img src="images/rolling/7_web.jpg" title="Playing outdoors"></div>
-        <div><img src="images/rolling/8_web.jpg" title="Summer carnival"></div>
-        <div><img src="images/rolling/9_web.jpg" title="Learning stations"></div>
-        <div><img src="images/rolling/10_web.jpg" title="Learning stations"></div>
-    </div>
-
-    <!-- //SLIDER   -->
-
-
-    <!-- about -->
-    <div class="about">
+    <!-- single -->
+    <div class="single about">
         <div class="container">
-            <div class="about-agileinfo">
-                <h3 class="w3ls-title">Our School</h3>
-                <p>
-                    <span><strong> Welcome to our website and thank you for taking the time to view our school.</strong></span>
-                    <br>
-                    <br>
-                    <span>Jogjakarta Community School (JCS) was founded in 2012 by Yayasan Suluh Semesta to deliver a quality education programme for children aged three to sixteen.  JCS is a very special school with its own unique atmosphere. We offer a curriculum that is internationally recognised and we demand high standards of behaviour and academic success from our children. More importantly, we want learning to be enjoyable, experiential and something our children want to be part of.</span>
-                    <br>
-                    <br>
-                    <span>JCS delivers a holistic education that is integrated with a modern internationally recognised curriculum. Our students leave JCS not only with internationally compatible academic skills but also with the social, emotional and physical skills that prepare them for the world beyond our school walls. We are supported in every way by a caring community of staff and families. </span>
-                    <br>
-                    <br>
-                    <span>We want our children to enjoy their time at JCS and to leave with a range of skills that will support them in their chosen pathways. Furthermore, we want our children to take with them happy memories of personal achievements and global friendships.</span> JCS is an excellent choice for your child to learn and we look forward to welcoming you and your family in the near future.
-                </p>
+            <h3 class="w3ls-title">Pastoral Care </h3>
+            <div class="col-md-12 w3ls_single_left">
+                <div class="w3ls_single_left_grid">
+                    <div class="clearfix"> </div>
+                </div>
+                <div class="w3ls_single_left_grid1">
+                    <img src="images/Mission%201.jpg" alt=" " class="img-responsive" />
+                    <p>
+                        <span>Pastoral care plays a vital role in the social and emotional development or our children and it permeates all areas of school life at JCS.
+<br><br> As a school we facilitate the development of all members of our school community, fostering relationships based on respect. We engender a sense of belonging to our school community where each individual is valued and her/his uniqueness is recognised. JCS promotes a school community that is caring and positive and as such, we believe pastoral care is the responsibility of the entire school community. 
+
+                        <br><br> JCS strives to ensure that every member of the school community will
+                            
+                        <ul>
+                            <li>feel valued and cared for</li>
+                            <li>be developed to his/her full potential – spiritually, morally, intellectually, physically, socially,
+personally and aesthetically
+</li>
+                         <li>have a sense of belonging within our school community</li>   
+                        </ul>
+                        <br><br> The school adopts a positive and inclusive approach to managing behaviour, adopting a range of strategies to work with the students. We help them develop skills in making appropriate choices and in realising potential consequences. We believe it is important that children understand they have rights and responsibilities and aim to equip them to act upon these. We set high expectations for staff and children alike and we expect all adults and older children to act as good role models in supporting younger students in JCS as part of our buddy and mentoring systems..
+                        <br><br>
+                            As a whole school we put great emphasis on the importance of interacting with others in respectful ways, irrespective of cultural background, with thoughtful speaking, actions and building relationships. We strive to remain true to our core values, nurturing the social and emotional development of all our JCS children.
+                        </span>
+                    </p>
+                    <div class="clearfix"> </div>
+                </div>
             </div>
+            <div class="clearfix"> </div>
+
+
         </div>
     </div>
-    <!-- //about -->
-    <!-- welcome -->
-    <div class="welcome agileits">
-        <div class=>
-            <img src="images/ourSchool.jpg" class="img-responsive" alt="" />
-        </div>
-        <div class="clearfix"> </div>
-    </div>
-    <!-- //welcome -->
-    <!-- services -->
-    <div class="services">
-        <div class="container">
-            <h3 class="w3ls-title">Our Services</h3>
-            <div class="services-agileinfo">
-                <div class="col-md-4 col-sm-4 col-xs-8 services-w3lsgrids">
-                    <div class="services-w3text">
-                        <!--						<i class="fa fa-cutlery" aria-hidden="true"></i> -->
-                        <h5>EYFS</h5>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4 col-xs-8 services-w3lsgrids">
-                    <div class="services-w3text srvs-w3text2">
-                        <!--						<i class="fa fa-map" aria-hidden="true"></i> -->
-                        <h5>Primary</h5>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-4 col-xs-6 services-w3lsgrids">
-                    <div class="services-w3text srvs-w3text3">
-                        <!--						<i class="fa fa-credit-card" aria-hidden="true"></i>-->
-                        <h5>Secondary</h5>
-                    </div>
-                </div>
-                <!--
-				<div class="col-md-3 col-sm-3 col-xs-8 services-w3lsgrids"> 
-					<div class="services-w3text srvs-w3text4"> 
-						<i class="fa fa-truck" aria-hidden="true"></i>
-						<h5>Learning</h5> 
-					</div>
-				</div>
--->
-                <div class="clearfix"> </div>
-            </div>
-        </div>
-    </div>
-    <!-- //services -->
-    <!-- news -->
-    <div class="services news">
-        <div class="container">
-            <!--			<h3 class="w3ls-title">News & Events</h3>  -->
-            <div class="news-agileinfo">
-                <div class="col-sm-4 news-w3lgrids">
-                    <div class="news-gridtext">
-                        <div class="news-w3img">
-                            <a href="single.html"><img src="images/squares/Primary_web.png" class="img-responsive zoom-img"  alt=""/></a>
-                        </div>
-                        <div class="news-w3imgtext">
-                            <h4><a href="single.html">Calendar</a></h4>
-                            <p>2017 - 2018 Calendar
-                                <br> 2018 - 2019 Calendar
-                            </p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4 news-w3lgrids">
-                    <div class="news-gridtext">
-                        <div class="news-w3img">
-                            <a href="single.html"><img src="images/squares/events1.jpg" class="img-responsive zoom-img" alt=""/></a>
-                        </div>
-                        <div class="news-w3imgtext">
-                            <!--							<h5 class="w3-agilep">Nov 4, 2016</h5>-->
-                            <h4><a href="single.html">Special Events</a></h4>
-                            <p>Events and activities enriching our children's learning</p>
-                            <!--							<a class="w3-agilebtn" href="single.html"><span>Read More</span></a> -->
-                        </div>
-                    </div>
-                </div>
-                <div class="col-sm-4 news-w3lgrids">
-                    <div class="news-gridtext">
-                        <div class="news-w3img">
-                            <a href="single.html"><img src="images/circles/new_gallery.jpg" class="img-responsive zoom-img" alt=""/></a>
-                        </div>
-                        <div class="news-w3imgtext">
-                            <!--							<h5 class="w3-agilep">Sept 21, 2016</h5>-->
-                            <h4><a href="single.html">Gallery</a></h4>
-                            <p>Photographs of our school, learning and special events</p>
-                            <!--							<a class="w3-agilebtn" href="single.html"><span>Read More</span></a>-->
-                        </div>
-                    </div>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
-        </div>
-    </div>
-    <!-- //news -->
-    <!-- features -->
-    <!--
-	<div class="features about">
-		<div class="container">   
-			<div class="wthree-features-row">
-				<div class="col-md-4 features-w3grid">
-					<div class="col-xs-3 features-w3lleft">
-						<i class="fa fa-phone" aria-hidden="true"></i>
-					</div>
-					<div class="col-xs-9 features-w3lright"> 
-						<h4>CONTACT</h4>
-						<p>+01 111 222 3333</p>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="col-md-4 features-w3grid">
-					<div class="col-xs-3 features-w3lleft">
-						<i class="fa fa-map-marker" aria-hidden="true"></i>
-					</div>
-					<div class="col-xs-9 features-w3lright"> 
-						<h4>LOCATION</h4>
-						<p>Broome St, New York, NY 10002</p>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="col-md-4 features-w3grid">
-					<div class="col-xs-3 features-w3lleft">
-						<i class="fa fa-envelope" aria-hidden="true"></i>
-					</div>
-					<div class="col-xs-9 features-w3lright"> 
-						<h4>EMAIL</h4>
-						<p><a href="mailto:info@example.com"> mail@example.com</a></p>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="clearfix"> </div>
-			</div>
-		</div>
-	</div>
--->
-    <!-- //features -->
+    <!-- //single -->
     <!-- footer -->
     <div class="footer w3layouts">
         <div class="container">
@@ -331,7 +173,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-md-2 col-sm-6 footer-grid w3social">
                     <h3>Media</h3>
                     <ul>
-                        <li><a href="https://www.facebook.com/Jogjakarta-Community-School-395131763855494"><i class="fa fa-facebook"></i>Facebook</a></li>
+                        <li><a href="#"><i class="fa fa-facebook"></i>Facebook</a></li>
                     </ul>
                 </div>
                 <div class="clearfix"> </div>
