Fixed some bugs

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
             <div class="footer-agileinfo">
                 <div class="col-md-10 col-sm-6 footer-grid">
                     <h3>Location</h3>
-                    <p>Jl Watagude, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
+                    <p>Jl Watugede, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
                 </div>
                 <!--
 				<div class="col-md-5 col-sm-6 footer-grid footer-tags">
