--- a/recruitment.html
+++ b/recruitment.html
@@ -126,7 +126,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
-                    <img src="images/Mission%201.jpg" alt=" " class="img-responsive" />
+                    <img src="images/recruitment.png" alt=" " class="img-responsive_custom" width="1000px" height="800px" />
                     <span>
                         <p>
                            <stron>Becoming Part of the JCS Team</stron> 
