--- a/vision.html
+++ b/vision.html
@@ -126,9 +126,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
-                    <img src="images/Mission%201.jpg" alt=" " class="img-responsive" />
+                    <img src="images/circles/Primary.jpg" alt=" " class="img-responsive" />
                     <p>
-                        <span><strong>JCS - Our Vision and Our Missions</strong></span>
+                        <span><strong>JCS - Our Vision and Our Mission</strong></span>
 
                         <span>At JCS we have a strong vision for the school, its students, parents and staff. This is supported by our mission statement and core values which form the very heart of our community.
                         </span>
