--- a/eyfs.html
+++ b/eyfs.html
@@ -126,9 +126,9 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
-                    <img src="images/Welcome%201.jpg" alt=" " class="img-responsive" />
+                    <img src="images/eyfs_2.jpg" alt=" " class="img-responsive" />
                     <p><span><strong>EYFS: Early Years Foundation Stage (3-5 years of age) </strong></span>
-                        <span>The EYFS curriculum is responsible for a child’s development from birth until they are 5 years old.  Here at JCS the EYFS curriculum begins at 3 years old and continues through to 5 years old:
+                        <span>The EYFS curriculum is responsible for a child’s development from birth until they are 5 years old.  Here at JCS our EYFS curriculum begins at 3 years old and continues through to 5 years old:
                         </span>
                         <span>
                         <ul>
@@ -143,9 +143,10 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         <span>There are 7 main areas of learning and development of the EYFS:</span>
                         <br>
                         <br>
-                        <img src="images/table.png" alt=" " class="img-responsive" />
+                        <img src="images/table.png" alt=" " class="img-responsive_1" width="800px" height="400px" />
                         <br>
-                        <span>Whilst the child is learning, the EYFS staff will be observing and supporting children, considering 3 Characteristics of Learning as they work with the children.</span>
+                        <br>
+                        <span>Whilst the child is learning, our EYFS staff will be observing and supporting children, considering 3 Characteristics of Learning as they work with the children.</span>
                         <br>
 
                         <ul>
@@ -153,6 +154,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                             <li>Active Learning - motivation</li>
                             <li>Creative Learning - critical thinking</li>
                         </ul>
+                        <br>
+                        <img src="images/eyfs_1.jpg" alt=" " class="img-responsive" />
                         <br>
                         <span>At JCS the EYFS curriculum is followed throughout Pre-school and Reception.  It is intended that the programme will create independent, motivated and engaged learners who will have a strong, solid foundation on which to build from Year 1 upward.</span>
                         <br><br>
