--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-sm-4 news-w3lgrids">
                     <div class="news-gridtext">
                         <div class="news-w3img">
-                            <a href="single.html"><img src="images/squares/Primary_web.png" class="img-responsive zoom-img"  alt=""/></a>
+                            <a href="single.html"><img src="images/ruru_louise.jpg" class="img-responsive zoom-img"  alt=""/></a>
                         </div>
                         <div class="news-w3imgtext">
                             <h4><a href="single.html">Calendar</a></h4>
@@ -256,7 +256,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-sm-4 news-w3lgrids">
                     <div class="news-gridtext">
                         <div class="news-w3img">
-                            <a href="single.html"><img src="images/circles/new_gallery.jpg" class="img-responsive zoom-img" alt=""/></a>
+                            <a href="single.html"><img src="images/xavier.jpg" class="img-responsive zoom-img" alt=""/></a>
                         </div>
                         <div class="news-w3imgtext">
                             <!--							<h5 class="w3-agilep">Sept 21, 2016</h5>-->
