Fixed ECO Awareness title

--- a/enviromental_mindfulness.html
+++ b/enviromental_mindfulness.html
@@ -120,7 +120,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- single -->
     <div class="single about">
         <div class="container">
-            <h3 class="w3ls-title">Environmental Awareness</h3>
+            <h3 class="w3ls-title">Eco Awareness</h3>
             <div class="col-md-12 w3ls_single_left">
                 <div class="w3ls_single_left_grid">
                     <!--
