--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                     <ul class="dropdown-menu">
                                         <li><a href="icons.html">Our Curriculum</a></li>
                                         <li><a href="eyfs.html">EYFS</a></li>
-                                        <li><a href="codes.html">Primary</a></li>
+                                        <li><a href="primary.html">Primary</a></li>
                                         <li><a href="codes.html">Secondary</a></li>
                                         <li><a href="bahasaIndonesia.html">Bahasa Indonesia</a></li>
                                         <li><a href="pastoral.html">Pastoral Care</a></li>
