--- a/primary.html
+++ b/primary.html
@@ -120,66 +120,94 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- single -->
     <div class="single about">
         <div class="container">
-            <h3 class="w3ls-title">Bahasa Indonesia</h3>
+            <h3 class="w3ls-title">Primary</h3>
             <div class="col-md-12 w3ls_single_left">
                 <div class="w3ls_single_left_grid">
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
-                    <img src="images/david.jpg" alt=" " class="center" />
-                    <p>
-                        <span><strong>Indonesian language</strong></span> The benefits of an international education are well documented. Our curriculum is taught in English and the subjects our children follow lead to internationally recognised standards. JCS is a community school and firmly rooted in Jogjakarta. As such, we also want our children to celebrate the Indonesian language and culture.
-                        <br><br> Here at the JCS we offer all our students the opportunity to learn Indonesian as taught by our team teachers whose first language is Indonesian. They tailor lessons to suit the levels of ability within the classroom. The teaching of Indonesian begins in our Primary phase and continues throughout the student’s time at school. Our older students are able to sit the Cambridge examinations in either First or Second Language Indonesian.
-
-                        <br><br> On top of our our language programme we promote Indonesian manners and traditions and explore local crafts and customs. One of our annual events is our Indonesia Week where children learn styles of art, study house building, craft work, local history and learn traditional songs and dance.
-                        <br><br> Developing an understanding of the Indonesian culture and language alongside the British curriculum means students will gain an international education without forgoing understanding and appreciation of local history, community and society. Speaking more than one language and the experience of living in a multicultural environment teaches us adaptability, tolerance and appreciation which are the benchmark of the new global citizen.
-
+                    <img src="images/Welcome%201.jpg" alt=" " class="img-responsive" />
+                    <p><span><strong>Primary</strong></span>
+                        <span>Children begin their primary education at the age of 5 and remain in this phase until 11 years of age. The Primary National Curriculum of England and Wales is made up of two key stages:
+                        <br>   <br>
+                        Key Stage 1:	Year 1 and Year 2 
+                        <br>
+                         <br>    
+                        Key Stage 2:	Year 3 until Year 6
+                        <br>
+                            
+                    </span>
+                        <span>At JCS we believe learning should be an exciting and inspiring journey encouraging students to embrace challenges and new ideas. We recognise that no children are alike and as such, students are given access to learning opportunities allowing each child to achieve their potential. This learning journey is facilitated by our team of qualified and dedicated teachers using the standards set out in the National Curriculum of England and Wales. We provide opportunities for our students to work and learn in a variety of group configurations, from individual classes to Key Stages as well as the entire Primary School coming together to work cooperatively.
+                    </span>
+                        <br>
+                        <img src="images/Welcome%202.jpg" alt=" " class="img-responsive" />
+                        <br>
+                        <span>The school provides a clear and focused teaching strategy for English and Mathematics, and these subjects are taught daily. Our students are also given access to a broad range of subjects and learning opportunities: 
+                            <br>
+                            <ul>
+                                <li>English</li>
+                                <li>Mathematics</li>
+                                <li>International Studies (which includes History and Geography)</li>
+                                <li>Art and Design Technology</li>
+                                <li>ICT</li>
+                                <li>Physical Education (P.E)</li>
+                                <li>Bahasa Indonesia  </li>
+                            <li>Music and Dance </li>
+                            </ul>
+                        <br>
+                   Children learn about the world in which they live as well as developing their own creativity and physical expression.  A thematic approach is used to teach these subjects where subjects can be integrated.  All subjects are taught by class teachers except Physical Education, ICT, Indonesian and Music and Dance which are taught by specialist staff.
+                    <br>
+                    Assessment of student’s progress is continuous through Teacher Assessment and in line with the standards set out in the British National Curriculum. Two interim reports and one summary report are completed during the academic year and these are followed up with parent-teacher conferences where there is the opportunity to discuss your child's education, development and progress.
+                    <br>    <br>
+You can access the Primary curriculum official document via the following link: 
+                        <a href="https://www.gov.uk/government/uploads/system/uploads/attachment_data/file/425601/PRIMARY_national_curriculum.pdf"> Primary Curriculum</a>
+                        </span>
                     </p>
-                    <div class="clearfix "> </div>
+                    <div class="clearfix"> </div>
                 </div>
             </div>
-            <div class="clearfix "> </div>
+            <div class="clearfix"> </div>
 
 
         </div>
     </div>
     <!-- //single -->
     <!-- footer -->
-    <div class="footer w3layouts ">
-        <div class="container ">
-            <div class="footer-agileinfo ">
-                <div class="col-md-10 col-sm-6 footer-grid ">
+    <div class="footer w3layouts">
+        <div class="container">
+            <div class="footer-agileinfo">
+                <div class="col-md-10 col-sm-6 footer-grid">
                     <h3>Location</h3>
                     <p>Jl Watagude, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
                 </div>
                 <!--
-				<div class="col-md-5 col-sm-6 footer-grid footer-tags ">
+				<div class="col-md-5 col-sm-6 footer-grid footer-tags">
 					<h3>Navigation</h3>
 					<ul>
-						<li><a href="contact.html "><i class="fa fa-angle-right "></i> Contact Us</a></li>
+						<li><a href="contact.html"><i class="fa fa-angle-right"></i> Contact Us</a></li>
 					</ul>
 				</div>
 -->
-                <div class="col-md-2 col-sm-6 footer-grid w3social ">
+                <div class="col-md-2 col-sm-6 footer-grid w3social">
                     <h3>Media</h3>
                     <ul>
-                        <li><a href="# "><i class="fa fa-facebook "></i>Facebook</a></li>
+                        <li><a href="#"><i class="fa fa-facebook"></i>Facebook</a></li>
                     </ul>
                 </div>
-                <div class="clearfix "> </div>
+                <div class="clearfix"> </div>
             </div>
         </div>
     </div>
     <!-- //footer -->
     <!-- modal-about -->
-    <div class="modal bnr-modal fade " id="myModal " tabindex="-1 " role="dialog ">
-        <div class="modal-dialog " role="document ">
-            <div class="modal-content ">
-                <div class="modal-header ">
-                    <button type="button " class="close " data-dismiss="modal " aria-label="Close "><span aria-hidden="true ">&times;</span></button>
+    <div class="modal bnr-modal fade" id="myModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
                 </div>
-                <div class="modal-body modal-spa ">
-                    <img src="images/img2.jpg " class="img-responsive " alt=" " />
+                <div class="modal-body modal-spa">
+                    <img src="images/img2.jpg" class="img-responsive" alt="" />
                     <h4>Cras rutrum iaculis enim</h4>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at. Donec fringilla lacus eu pretium rutrum. Cras aliquet congue ullamcorper. Etiam mattis eros eu ullamcorper volutpat. Proin ut dui a urna efficitur varius miet congue consectetur adipiscing. <br>Uisque molestie cursus miet congue consectetur adipiscing elit cras rutrum iaculis enim, Lorem ipsum dolor sit amet, non convallis felis mattis at. Maecenas sodales tortor ac ligula ultrices dictum et quis urna. Etiam pulvinar metus neque, eget porttitor massa vulputate in. Fusce lacus purus, pulvinar ut lacinia id, sagittis eu mi. Vestibulum eleifend massa sem, eget dapibus turpis efficitur at. </p>
                 </div>
@@ -188,12 +216,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </div>
     <!-- //modal-about -->
     <!-- start-smooth-scrolling -->
-    <script src="js/SmoothScroll.min.js "></script>
-    <script type="text/javascript " src="js/move-top.js "></script>
-    <script type="text/javascript " src="js/easing.js "></script>
-    <script type="text/javascript ">
+    <script src="js/SmoothScroll.min.js"></script>
+    <script type="text/javascript" src="js/move-top.js"></script>
+    <script type="text/javascript" src="js/easing.js"></script>
+    <script type="text/javascript">
         jQuery(document).ready(function($) {
-            $(".scroll ").click(function(event) {
+            $(".scroll").click(function(event) {
                 event.preventDefault();
 
                 $('html,body').animate({
@@ -205,7 +233,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     </script>
     <!-- //end-smooth-scrolling -->
     <!-- smooth-scrolling-of-move-up -->
-    <script type="text/javascript ">
+    <script type="text/javascript">
         $(document).ready(function() {
             /*
             var defaults = {
@@ -227,7 +255,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/bootstrap.js "></script>
+    <script src="js/bootstrap.js"></script>
 </body>
 
 </html>
