--- a/index.html
+++ b/index.html
@@ -194,29 +194,29 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                 <div class="col-md-4 col-sm-4 col-xs-8 services-w3lsgrids">
                     <div class="services-w3text">
                         <!--						<i class="fa fa-cutlery" aria-hidden="true"></i> -->
-                        <h5>EYFS</h5>
+                        <a href="eyfs.html">
+                            <h5>
+                                EYFS
+                            </h5>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-8 services-w3lsgrids">
                     <div class="services-w3text srvs-w3text2">
                         <!--						<i class="fa fa-map" aria-hidden="true"></i> -->
-                        <h5>Primary</h5>
+                        <a href="primary.html">
+                            <h5>Primary</h5>
+                        </a>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-4 col-xs-6 services-w3lsgrids">
                     <div class="services-w3text srvs-w3text3">
                         <!--						<i class="fa fa-credit-card" aria-hidden="true"></i>-->
-                        <h5>Secondary</h5>
+                        <a href="secondary.html">
+                            <h5>Secondary</h5>
+                        </a>
                     </div>
                 </div>
-                <!--
-				<div class="col-md-3 col-sm-3 col-xs-8 services-w3lsgrids"> 
-					<div class="services-w3text srvs-w3text4"> 
-						<i class="fa fa-truck" aria-hidden="true"></i>
-						<h5>Learning</h5> 
-					</div>
-				</div>
--->
                 <div class="clearfix"> </div>
             </div>
         </div>
