--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                     <ul class="dropdown-menu">
                                         <li><a href="icons.html">Calendar</a></li>
                                         <li><a href="codes.html">Times of the Day</a></li>
-                                        <li><a href="codes.html">Lunches & Snackes</a></li>
-                                        <li><a href="codes.html">House System</a></li>
+                                        <li><a href="lunches.html">Lunches & Snackes</a></li>
+                                        <li><a href="houses.html">House System</a></li>
                                         <li><a href="codes.html">Merits and Dojos</a></li>
                                         <li><a href="codes.html">After School Activities</a></li>
                                         <li><a href="codes.html">Special Events</a></li>
