--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                         <li><a href="codes.html">Merits and Dojos</a></li>
                                         <li><a href="codes.html">After School Activities</a></li>
                                         <li><a href="codes.html">Special Events</a></li>
-                                        <li><a href="codes.html">Uniform</a></li>
+                                        <li><a href="uniform.html">Uniform</a></li>
                                     </ul>
                                 </li>
 
