+Merits and ASA

--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                         <li><a href="codes.html">Times of the Day</a></li>
                                         <li><a href="lunches.html">Lunches & Snackes</a></li>
                                         <li><a href="houses.html">House System</a></li>
-                                        <li><a href="codes.html">Merits and Dojos</a></li>
-                                        <li><a href="codes.html">After School Activities</a></li>
+                                        <li><a href="merits.html">Merits and Dojos</a></li>
+                                        <li><a href="asa.html">After School Activities</a></li>
                                         <li><a href="codes.html">Special Events</a></li>
                                         <li><a href="uniform.html">Uniform</a></li>
                                     </ul>
