--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                                         <li><a href="houses.html">House System</a></li>
                                         <li><a href="merits.html">Merits and Dojos</a></li>
                                         <li><a href="asa.html">After School Activities</a></li>
-                                        <li><a href="codes.html">Special Events</a></li>
+                                        <li><a href="events.html">Special Events</a></li>
                                         <li><a href="uniform.html">Uniform</a></li>
                                     </ul>
                                 </li>
