--- a/houses.html
+++ b/houses.html
@@ -126,11 +126,12 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                     <div class="clearfix"> </div>
                 </div>
                 <div class="w3ls_single_left_grid1">
-                    <img src="images/Welcome%201.jpg" alt=" " class="center" />
-                    <p>
+                    <img src="images/Houses_2.jpeg" alt=" " class="center" />
+                    <div class="center">
+                        <br>
                         <h3>JCS Houses</h3>
                         <br>
-                        <span>JAt JCS we promote teamwork and cooperation amongst our student body and staff. As part of this development the school runs a House system similar to many you would find in UK schools. All students and teachers are placed into a House which they remain in during their time at JCS. 
+                        <span>At JCS we promote teamwork and cooperation amongst our student body and staff. As part of this development the school runs a House system similar to many you would find in UK schools. All students and teachers are placed into a House which they remain in during their time at JCS. 
                         <br>
                              <br>
                         Our Houses are named after 3 characters from the Indonesian legend of Mahabharata: 
@@ -142,30 +143,32 @@ License URL: http://creativecommons.org/licenses/by/3.0/
                         Srikandi (green)
 
                         <br>
+                        <br>
+                            <img src="images/Houses_1.jpg" alt=" " class="center" />
                         <br>Students can gain House points as part of their contribution to school life. This may be helping somebody, being polite or completing a set goal. The school also hosts a number of events, whole school activities and inter-house competitions such as our swimming and athletic carnivals. In Primary, House points are linked to the Class Dojo. House Captains and Vice Captains are elected through the student body.
                             <br><Br>
                     </span>
 
 
-                    </p>
-                    <div class="clearfix"> </div>
+                        </p>
+                        <div class="clearfix"> </div>
+                    </div>
                 </div>
+                <div class="clearfix"> </div>
+
+
             </div>
-            <div class="clearfix"> </div>
-
-
         </div>
-    </div>
-    <!-- //single -->
-    <!-- footer -->
-    <div class="footer w3layouts">
-        <div class="container">
-            <div class="footer-agileinfo">
-                <div class="col-md-10 col-sm-6 footer-grid">
-                    <h3>Location</h3>
-                    <p>Jl Watagude, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
-                </div>
-                <!--
+        <!-- //single -->
+        <!-- footer -->
+        <div class="footer w3layouts">
+            <div class="container">
+                <div class="footer-agileinfo">
+                    <div class="col-md-10 col-sm-6 footer-grid">
+                        <h3>Location</h3>
+                        <p>Jl Watagude, Mudal, Sariharjo, Ngaglik, Sleman, Yogyakarta, Indonesia 55581.</p>
+                    </div>
+                    <!--
 				<div class="col-md-5 col-sm-6 footer-grid footer-tags">
 					<h3>Navigation</h3>
 					<ul>
@@ -173,74 +176,74 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 					</ul>
 				</div>
 -->
-                <div class="col-md-2 col-sm-6 footer-grid w3social">
-                    <h3>Media</h3>
-                    <ul>
-                        <li><a href="#"><i class="fa fa-facebook"></i>Facebook</a></li>
-                    </ul>
-                </div>
-                <div class="clearfix"> </div>
-            </div>
-        </div>
-    </div>
-    <!-- //footer -->
-    <!-- modal-about -->
-    <div class="modal bnr-modal fade" id="myModal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-                </div>
-                <div class="modal-body modal-spa">
-                    <img src="images/img2.jpg" class="img-responsive" alt="" />
-                    <h4>Cras rutrum iaculis enim</h4>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at. Donec fringilla lacus eu pretium rutrum. Cras aliquet congue ullamcorper. Etiam mattis eros eu ullamcorper volutpat. Proin ut dui a urna efficitur varius miet congue consectetur adipiscing. <br>Uisque molestie cursus miet congue consectetur adipiscing elit cras rutrum iaculis enim, Lorem ipsum dolor sit amet, non convallis felis mattis at. Maecenas sodales tortor ac ligula ultrices dictum et quis urna. Etiam pulvinar metus neque, eget porttitor massa vulputate in. Fusce lacus purus, pulvinar ut lacinia id, sagittis eu mi. Vestibulum eleifend massa sem, eget dapibus turpis efficitur at. </p>
+                    <div class="col-md-2 col-sm-6 footer-grid w3social">
+                        <h3>Media</h3>
+                        <ul>
+                            <li><a href="#"><i class="fa fa-facebook"></i>Facebook</a></li>
+                        </ul>
+                    </div>
+                    <div class="clearfix"> </div>
                 </div>
             </div>
         </div>
-    </div>
-    <!-- //modal-about -->
-    <!-- start-smooth-scrolling -->
-    <script src="js/SmoothScroll.min.js"></script>
-    <script type="text/javascript" src="js/move-top.js"></script>
-    <script type="text/javascript" src="js/easing.js"></script>
-    <script type="text/javascript">
-        jQuery(document).ready(function($) {
-            $(".scroll").click(function(event) {
-                event.preventDefault();
+        <!-- //footer -->
+        <!-- modal-about -->
+        <div class="modal bnr-modal fade" id="myModal" tabindex="-1" role="dialog">
+            <div class="modal-dialog" role="document">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+                    </div>
+                    <div class="modal-body modal-spa">
+                        <img src="images/img2.jpg" class="img-responsive" alt="" />
+                        <h4>Cras rutrum iaculis enim</h4>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras rutrum iaculis enim, non convallis felis mattis at. Donec fringilla lacus eu pretium rutrum. Cras aliquet congue ullamcorper. Etiam mattis eros eu ullamcorper volutpat. Proin ut dui a urna efficitur varius miet congue consectetur adipiscing. <br>Uisque molestie cursus miet congue consectetur adipiscing elit cras rutrum iaculis enim, Lorem ipsum dolor sit amet, non convallis felis mattis at. Maecenas sodales tortor ac ligula ultrices dictum et quis urna. Etiam pulvinar metus neque, eget porttitor massa vulputate in. Fusce lacus purus, pulvinar ut lacinia id, sagittis eu mi. Vestibulum eleifend massa sem, eget dapibus turpis efficitur at. </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- //modal-about -->
+        <!-- start-smooth-scrolling -->
+        <script src="js/SmoothScroll.min.js"></script>
+        <script type="text/javascript" src="js/move-top.js"></script>
+        <script type="text/javascript" src="js/easing.js"></script>
+        <script type="text/javascript">
+            jQuery(document).ready(function($) {
+                $(".scroll").click(function(event) {
+                    event.preventDefault();
 
-                $('html,body').animate({
-                    scrollTop: $(this.hash).offset().top
-                }, 1000);
-            });
-        });
-
-    </script>
-    <!-- //end-smooth-scrolling -->
-    <!-- smooth-scrolling-of-move-up -->
-    <script type="text/javascript">
-        $(document).ready(function() {
-            /*
-            var defaults = {
-            	containerID: 'toTop', // fading element id
-            	containerHoverID: 'toTopHover', // fading element hover id
-            	scrollSpeed: 1200,
-            	easingType: 'linear' 
-            };
-            */
-
-            $().UItoTop({
-                easingType: 'easeOutQuart'
+                    $('html,body').animate({
+                        scrollTop: $(this.hash).offset().top
+                    }, 1000);
+                });
             });
 
-        });
+        </script>
+        <!-- //end-smooth-scrolling -->
+        <!-- smooth-scrolling-of-move-up -->
+        <script type="text/javascript">
+            $(document).ready(function() {
+                /*
+                var defaults = {
+                	containerID: 'toTop', // fading element id
+                	containerHoverID: 'toTopHover', // fading element hover id
+                	scrollSpeed: 1200,
+                	easingType: 'linear' 
+                };
+                */
 
-    </script>
-    <!-- //smooth-scrolling-of-move-up -->
-    <!-- Bootstrap core JavaScript
+                $().UItoTop({
+                    easingType: 'easeOutQuart'
+                });
+
+            });
+
+        </script>
+        <!-- //smooth-scrolling-of-move-up -->
+        <!-- Bootstrap core JavaScript
     ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="js/bootstrap.js"></script>
+        <!-- Placed at the end of the document so the pages load faster -->
+        <script src="js/bootstrap.js"></script>
 </body>
 
 </html>
